--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,11 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
+    
     <body>
         {% block body %}{% endblock %}
     </body>
+    <footer>
+        <h1>Aled le footer</h1>
+    </footer>
 </html>
