--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,6 @@
         {% block body %}{% endblock %}
     </body>
     <footer>
-        <h1>Aled le footer</h1>
+        <h1>le footer</h1>
     </footer>
 </html>
