Add begining of nav

--- a/templates/User/article.html.twig
+++ b/templates/User/article.html.twig
@@ -6,7 +6,15 @@
     oui le header
     </header>
 {% endblock %}
-
+{% block nav %}
+<nav>
+    <ul>
+        <li>Article 1</li>
+        <li>Article 2</li>
+        <li>Article 3</li>
+    </ul>
+</nav>
+{% endblock %}
 {% block content %}
     <h1>Contenu</h1>
 {% endblock %}
