completing the templates, creating a new controller that control articles, creating new routes. Now, you can navigate with a link in the nav bar

--- a/templates/User/article.html.twig
+++ b/templates/User/article.html.twig
@@ -1,4 +1,5 @@
-{% extends "base.html.twig" %}
+{% extends "User/articleBase.html.twig" %}
+
 {% block header %}
     <header style="
     background-color:yellow;
@@ -6,15 +7,8 @@
     oui le header
     </header>
 {% endblock %}
-{% block nav %}
-<nav>
-    <ul>
-        <li>Article 1</li>
-        <li>Article 2</li>
-        <li>Article 3</li>
-    </ul>
-</nav>
-{% endblock %}
+
 {% block content %}
-    <h1>Contenu</h1>
+    <h1>{{id}}</h1>
+    
 {% endblock %}
