adding listeArtcile template, completing templates and adding TO-DO elements

--- a/templates/User/article.html.twig
+++ b/templates/User/article.html.twig
@@ -10,5 +10,5 @@
 
 {% block content %}
     <h1>{{id}}</h1>
-    
+    {#TO-DO : query SQL to get data (from id) about this article #}
 {% endblock %}
