--- a/templates/User/articleBase.html.twig
+++ b/templates/User/articleBase.html.twig
@@ -7,8 +7,9 @@
     </header>
 {% endblock %}
 {% block nav %}
-<nav>
+<nav >
     <ul>
+        {#TO-DO : create a query to generate the list items from Article table#}
         <li><a href="{{path('article', { 'id': "1" })}}">Article 1</a></li>
         <li>Article 2</li>
         <li>Article 3</li>
