--- a/templates/User/article.html.twig
+++ b/templates/User/article.html.twig
@@ -9,6 +9,10 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{id}}</h1>
-    {#TO-DO : query SQL to get data (from id) about this article #}
+    
+    <div class="article">
+        <h1>Titre de l'article {{id}}</h1>
+        <p>Contenu de l'article en cours de lecture</p>
+        {#TO-DO : query SQL to get data (from id) about this article #}
+    </div>
 {% endblock %}
