--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,13 +27,7 @@
         {% endblock %}
     {% endblock %}
     
-    <footer style="
-   position:fixed;
-   text-align:center;
-   background-color:green;
-   bottom:0px;
-   z-index:1;
-   width:100%;">
+    <footer >
         Blog réalisé par : Nicolas Guruphat, Hugo Torres - réalisé dans le cadre du cours de PHP avancé
     </footer>
     </body>
