--- a/templates/User/postBase.html.twig
+++ b/templates/User/postBase.html.twig
@@ -10,9 +10,9 @@
 <nav >
     <ul>
         {#TO-DO : create a query to generate the list items from Article table#}
-        <li><a href="{{path('article', { 'id': "1" })}}">Article 1</a></li>
-        <li>Article 2</li>
-        <li>Article 3</li>
+        <li><a href="{{path('post', { 'id': "1" })}}">Post 1</a></li>
+        <li>Post 2</li>
+        <li>Post 3</li>
     </ul>
 </nav>
 {% endblock %}
