--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9,4 +9,14 @@ footer{
     width:100%
 }
 
+.post{
+    margin: 3%;
+    padding : 3%;
+    background-color: grey;
+    color: black;
+}
 
+header{
+    background-color:yellow;
+    text-align: center;
+}
