--- a/templates/User/post.html.twig
+++ b/templates/User/post.html.twig
@@ -10,9 +10,10 @@
 
 {% block content %}
     
-    <div class="article">
+    <div class="post">
         <h1>Titre de l'article {{id}}</h1>
         <p>Contenu de l'article en cours de lecture</p>
         {#TO-DO : query SQL to get data (from id) about this article #}
     </div>
+
 {% endblock %}
