--- a/templates/User/postBase.html.twig
+++ b/templates/User/postBase.html.twig
@@ -1,18 +1,18 @@
 {% extends "base.html.twig" %}
 {% block header %}
-    <header style="
-    background-color:yellow;
-    ">
-    oui le header
+    <header>
+        oui le header
     </header>
 {% endblock %}
 {% block nav %}
 <nav >
     <ul>
         {#TO-DO : create a query to generate the list items from Article table#}
-        <li><a href="{{path('post', { 'id': "1" })}}">Post 1</a></li>
-        <li>Post 2</li>
-        <li>Post 3</li>
+        {% set array = ["1","2","3","4","5","6","7"] %}
+        {% for value in array %}
+            <li><a href="{{path('post', { 'id': value })}}">Post {{value}}</a></li>
+        {% endfor %}
+
     </ul>
 </nav>
 {% endblock %}
