--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,10 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
-/*
-#footer{
+
+footer{
     position:fixed;
     text-align:center;
     background-color:green;
     bottom:0px;
     z-index:1;
     width:100%
-}*/
+}
