Restructuration of controllers and templates

--- a/templates/User/listPost.html.twig
+++ b/templates/User/listPost.html.twig
@@ -1,9 +1,5 @@
-{% extends "User/postBase.html.twig" %}
+{% extends "User/base.user.html.twig" %}
 {% block content %}
-<h1>liste des sujets</h1>
-    <ul>
-        {#TO-DO : create a query to generate the list items from Category table#}
-        <li>Category 1</li>
-        <li>Category 2</li>
-    </ul>
+	<h1>liste des posts pour cette catégorie</h1>
+
 {% endblock %}
