--- a/templates/User/post.html.twig
+++ b/templates/User/post.html.twig
@@ -1,13 +1,14 @@
-{% extends "User/postBase.html.twig" %}
-
+{% extends "User/base.user.html.twig" %}
 
 
 {% block content %}
-    
-    <div class="post">
-        <h1>Titre de l'article {{id}}</h1>
-        <p>Contenu de l'article en cours de lecture</p>
-        {#TO-DO : query SQL to get data (from id) about this article #}
-    </div>
+
+	<div class="post">
+		<h1>Titre de l'article
+			{{id}}</h1>
+		<p>Contenu de l'article en cours de lecture</p>
+		{{post.name}}
+		{#TO-DO : query SQL to get data (from id) about this article #}
+	</div>
 
 {% endblock %}
