--- a/templates/User/base.user.html.twig
+++ b/templates/User/base.user.html.twig
@@ -10,15 +10,14 @@
 		<ul
 			class="listPost">
 			{#TO-DO : create a query to generate the list items from Article table#}
-			{% set array = ["1","2","3","4","5","6","7"] %}
-
-			{#% post ={{path('post.show', {'id' : "1" })}} %#}
-			{% for value in array %}
+			{% for value in listPost %}
 				<li>
-					<a href="{{path('post', { 'id': value })}}">Post
-						{{value}}</a>
+					<a href="{{path('show', { 'id': value.id })}}">
+
+						{{value.title}}</a>
 				</li>
 			</br>
 		{% endfor %}
 	</ul>
+
 </nav>{% endblock %}
