--- a/templates/User/post.html.twig
+++ b/templates/User/post.html.twig
@@ -5,9 +5,9 @@
 
 	<div class="post">
 		<h1>Titre de l'article
-			{{id}}</h1>
+			{{post.title}}</h1>
 		<p>Contenu de l'article en cours de lecture</p>
-		{{post.name}}
+		{{post.description}}
 		{#TO-DO : query SQL to get data (from id) about this article #}
 	</div>
 
