adding commentary form and saving system

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -17,6 +17,16 @@ footer{
 }
 
 header{
-    background-color:yellow;
+    background-color:purple;
     text-align: center;
+}
+
+nav{
+    display: inline-block;
+    background-color: purple;
+}
+
+body{
+    display: inline-block;
+    background-color: red;
 }
