--- a/templates/User/post.html.twig
+++ b/templates/User/post.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-
+	<h1>{{formResponse}}</h1>
 	<div class="post">
 		<h1>Titre de l'article
 			{{post.title}}</h1>
@@ -10,5 +10,4 @@
 		{{post.description}}
 		{#TO-DO : query SQL to get data (from id) about this article #}
 	</div>
-
-{% endblock %}
+	{{ form(form) }}{% endblock %}
