Add post by a form is now possible

--- a/templates/User/category.html.twig
+++ b/templates/User/category.html.twig
@@ -1,6 +1,8 @@
 {% extends "User/base.user.html.twig" %}
 {% block content %}
-	<h1>liste des sujets</h1>
+
+	<h2>List of category</h2>
+
 	<ul>
 
 		{% for category in listCategory%}
