--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block header %}
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body>
+		{% block header %}{% endblock %}
 
-        {% endblock %}
+		{% block body %}
 
-        {% block body %}
+			{% block nav %}{% endblock %}
 
-            {% block nav %}
+			{% block content %}{% endblock %}
 
-            {% endblock %}
+		{% endblock %}
 
-            <h1>Body</h1>
+		<footer>
+			Blog by : Nicolas Guruphat, Hugo Torres - produced as part of advanced PHP courses
+		</footer>
 
-            {% block content %}
-
-            {% endblock %}
-
-        {% endblock %}
-        
-        <footer >
-            Blog réalisé par : Nicolas Guruphat, Hugo Torres - réalisé dans le cadre du cours de PHP avancé
-        </footer>
-
-    </body>
+	</body>
 </html>
