fix a bug in admin : can now access to post section

--- a/templates/Admin/controlPanel.html.twig
+++ b/templates/Admin/controlPanel.html.twig
@@ -7,4 +7,7 @@
 	<a href="{{path('admin_comment')}}">
 		<h2>Comments</h2>
 	</a>
+	<a href="{{path('admin_post')}}">
+		<h2>Post</h2>
+	</a>
 {% endblock %}
