--- a/templates/Admin/Category/category.admin.html.twig
+++ b/templates/Admin/Category/category.admin.html.twig
@@ -5,4 +5,5 @@
 	<a href="{{path('admin_delete_category', { 'id': category.id })}}">
 		<h2>delete</h2>
 	</a>
+	<h2>Modify Name</h2>
 	{{form(form)}}{% endblock %}
