finished admin header

--- a/templates/Admin/base.admin.html.twig
+++ b/templates/Admin/base.admin.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
 {% block header %}
 	<a href="{{path('admin')}}">Control Panel</a>
-{% endblock %}
+</br>
+<a href="{{path('category')}}">User main page</a>{% endblock %}
